tests/comp/sem/valid/class_with_fields.mj
class A {

	public int mem1;
	public boolean mem2;

	public static void main(String[] args) {
	}

}
