tests/comp/sem/invalid/main_not_unique-3.mj
class Good {
	public static void main(String[] args) { }
}

class Evil {
	/*** public static void main(String[] args) { } ***/
}
